# nimbus_bot

./: .gitignore  README.md
nimbus_bot/: package.xml
nimbus_bringup/launch/: nimbus_bringup.launch  nimbus_bringup2.launch  nimbus_bringup_crowd_interface.launch  nimbus_minimal.launch  nimbus_recognition.launch  robot_model.launch  sensors.launch  sensors2.launch  view.launch
nimbus_bringup/rviz/: tablebot_grasp_collection_frontend.rviz
nimbus_description/: CMakeLists.txt  package.xml
nimbus_description/launch/: nimbus_description.launch  nimbus_description_calibration.launch  view.launch
nimbus_description/robots/: nimbus.urdf  nimbus.urdf.xacro  nimbus_calibration.urdf  nimbus_calibration.urdf.xacro
nimbus_description/rviz/: calibrate_robot.rviz
nimbus_interactive_manipulation/: CMakeLists.txt  package.xml
nimbus_interactive_manipulation/src/: nimbus6dofPlanning.cpp  nimbus6dofVis.cpp  nimbusNavidget.cpp  (+1 more)
nimbus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nimbus_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  nimbus.srdf  sensors_depth.yaml  sensors_point_cloud.yaml
nimbus_moveit_config/include/nimbus_moveit_config/: common_actions.h  jaco_trajectory_controller.h  nimbus_moveit.h  primitive_actions.h
nimbus_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  nimbus_moveit_controller_manager.launch.xml  nimbus_moveit_full.launch  nimbus_moveit_sensor_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tablebot_moveit_controller_manager.launch.xml  tablebot_moveit_sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
nimbus_moveit_config/src/: common_actions.cpp  jaco_trajectory_controller.cpp  nimbus_moveit.cpp  primitive_actions.cpp
nimbus_perception/: CMakeLists.txt  package.xml
(+28 files in other folders)
